--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "elucidat": "node elucidat-data.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +15,8 @@
     "cheerio": "^1.0.0-rc.10",
     "json2csv": "^5.0.7",
     "papaparse": "^5.3.2"
+  },
+  "devDependencies": {
+    "electron": "^18.2.0"
   }
 }
