--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Dummy Workflow
 on:
   push:
     branches:
-      - GHA-test
+      - GHA-Testing
       - master
   pull_request:
     types: [opened]
