--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,13 +3,10 @@ on:
   push:
     branches:
       - GHA-testing-fake-master
-      - master
       
 jobs:
   Terraform_Plan:
-    runs-on: [ ubuntu-latest, self-hosted, default ]
-    container: 
-      image: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -19,3 +16,4 @@ jobs:
         with:
           node-version: 16.13.x
           cache: npm
+      - run: npm deploy
