--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "elucidat": "node elucidat-data.js"
+    "elucidat": "node elucidat-data.js",
+    "deploy": "node deploy.js",
+    "plan": "node plan.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +16,7 @@
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.10",
     "json2csv": "^5.0.7",
+    "moment": "^2.29.3",
     "papaparse": "^5.3.2"
   },
   "devDependencies": {
