--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: On PR (tf plan) Dummy Workflow
 on:
   pull_request:
-    types: [opened]
+    types: [opened, synchronize]
     branches:
       - GHA-testing-fake-master
 
